done almost all, but still have prob with visual side

--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script defer src="./src/script.js"></script>
-  <link rel="stylesheet" href="./src/style.css">
+  <link rel="stylesheet" href="./src/main.css">
   <title>randomUser</title>
 </head>
 <body>
-  
+  <section class="form-section">
+    <form>
+      <input type="text" placeholder="Search">
+      <button class="search-btn">Search</button>
+    </form>
+  </section>
+ 
+  <section class="user-section user-section-height">
+    <!-- <article class="card-wrapper">
+      <img class="user-img" src="https://randomuser.me/api/portraits/women/60.jpg" alt="user">
+      <h2 class="user-name">Mary Doe</h2>
+      <p class="user-location">London</p>
+      <h3 class="user-contact">Contact Me</h3>
+      <p class="user-email">email@example.com</p>
+      <p class="user-phone">+380954154236</p>
+      <hr>
+      <button class="add-user-btn">Add User</button>
+    </article> -->
+  </section>
 </body>
 </html>
